<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    >

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BD2AC0"
        android:text="Cancel"
        android:textColor="#000000" />


    <Button
        android:id="@+id/btn_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/productDetails"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="20dp"
        android:backgroundTint="#BD2AC0"
        android:text="Scan Barcode"
        android:textColor="#000000"

        ></Button>

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignBottom="@+id/productDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="531dp"
        android:background="#BD2AC0"
        android:src="@drawable/baseline_image_24" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/productImage" />


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/productImage"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="96dp"
        android:layout_toStartOf="@+id/productImage" />


    <LinearLayout
        android:id="@+id/productDetails"
        android:layout_width="377dp"
        android:layout_height="430dp"
        android:layout_above="@+id/btn_add_item"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:background="#BD2AC0"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product Name: "
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter Product Name"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Description:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_pink"
            android:padding="8dp"
            android:maxLines="1"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of Purchase: "
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"

                />

            <EditText
                android:id="@+id/purchaseDate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/no_underline_border"
                android:focusable="false"
                android:gravity="bottom"
                android:hint="Select a date"
                android:inputType="none"
                android:onClick="showDatePickerDialog"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                android:textSize="16sp" />
        </LinearLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/make"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16sp" />
        </LinearLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model: "
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16dp"></EditText>
        </LinearLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estimated Value: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/estimatedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Serial Number (opt.): "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/serialnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16dp"></EditText>

            <ImageView
                android:id="@+id/scanButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/scan_icon_black" />


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"></Space>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comments (opt.): "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:hint=""
                android:textSize="16sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="41dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tags: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/add_tag_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_border_rectangular"
                android:gravity="center"
                android:text="+"
                android:textSize="15dp"

                ></TextView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/addFragmentTagsChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </com.google.android.material.chip.ChipGroup>


        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/add_image_button"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_above="@+id/productDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="131dp"
        android:background="#FFBD2AC0"
        android:src="@drawable/baseline_camera_alt_24"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BD2AC0"
        android:text="ADD ITEM"
        android:textColor="#000000" />


</RelativeLayout>
